--- a/precipitation.html
+++ b/precipitation.html
@@ -97,7 +97,7 @@
                 <div class="rainfall-percentage__rainfall-level">
                   <div class="rainfall-level-15"></div>
                 </div>
-              </div>
+              </section>
               <div class='weather_row'>
             <div class='week_day_info'>
                 <div class='particles'>ср</div>
