--- a/wind.html
+++ b/wind.html
@@ -45,6 +45,11 @@
                <img src="pics/Cloudy Weather.png" class="img" alt="облачно"><br>
                 <span>22℃</span>
            </div>
+           <div>
+            <a href="html.html" class="temperature">Температура</a>
+            <a href="precipitation.html" class="rainfall">Вероятность осадков</a>
+            <a href="wind.html" class="wind">Ветер</a>
+        </div>
     <section class="wind-and-time">
                     <div class="value-and-arrows__wind-speed">
                         <div class="wind-320-degrees">
@@ -101,7 +106,7 @@
                         </div>
                         <div>5 м/с</div>
                     </div>
-                </div>
+                </section>
                 <div class='weather_row'>
             <div class='week_day_info'>
                 <div class='particles'>ср</div>
