--- a/html5.html
+++ b/html5.html
@@ -104,7 +104,7 @@
 			</div>
 		<div class='buttons_block'>
 			<div class='buttons' id="buttons">
-				<div class='button' id="button" data-index="0">пт</div>
+				<div class='button active' id="button" data-index="0">пт</div>
 				<div class='button' id="button" data-index="1">сб</div>
 				<div class='button' id="button" data-index="2">вс</div>
 				<div class='button' id="button" data-index="3">пн</div>
